# fastapi-bot

./: .env.example  README.md  pyproject.toml
fastapi-bot/: __main__.py
static/: index.html  oops.html  script.js  styles.css  thanks.html
